# simple_sns

./: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2023-02-21-002011_create_user_table/: up.sql
migrations/2023-02-23-103116_add_user_timestamp/: down.sql  up.sql
migrations/2023-02-23-175937_change_user_id_to_uuid/: down.sql  up.sql
src/: cruds.rs  db.rs  lib.rs  main.rs  models.rs  routers.rs  schema.rs
