[package]
name = "simple-sns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
diesel = { version = "2.0.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
bcrypt = "0.14.0"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
